# Actix-Job-Worker

./: .env  Cargo.toml  README.org  rustfmt.toml
src/: config.rs  macros.rs  main.rs  messenger.rs  types.rs
src/actors/: breaker.rs  confession.rs  enums.rs  messages.rs  mod.rs  reader.rs  sample_message.json
src/connections/: mod.rs  rabbit.rs
src/crews/: guard.rs
src/handlers/: mod.rs  posts.rs
src/hollywood/: mod.rs  new_post_actor.rs  reader.rs  scout.rs
src/services/: rabbit.rs  redis.rs
